  update initramfs and update GRUB menu; Fixed: Progress will be
  displayed when restoring another system in GUI mode; Added
  right-click menu option to view restore log file;

  * RestoreWindow: Exclude Apps: Populate items from destination home
  directories as well as snapshot's home directories.

  * Restore: Bind /dev/pts when chrooting the restored system;

  * UI: Added borders around statusbar; 

  * OS Support: Fedora/RedHat: Fixed detection of Live USB mode;
  Fixed an issue with grub update;

  * Create: Exclude /var/spool and ~/.dbus while creating snapshots;
  File count will be saved when snapshots are created; 

  * Fixed the handling of leading and trailing spaces in device
  labels and mount paths;

  * SettingsWindow: Replaced Include and Exclude tabs with a single
  tab for Filters; Resized the window size to match Main Window; Main
  Window will be hidden when the Settings Window is displayed;

  * Exclude /etc/timeshift.json so that it is not replaced when a
  snapshot is restored

 -- Tony George <tony.george.kol@gmail.com>  Sun, 06 Nov 2016 10:00:00 +0530


timeshift (16.10.6) trusty; urgency=medium

  * Fixed scheduled backups; Initialize display for the scheduled cron task;
  
 -- Tony George <tony.george.kol@gmail.com>  Sun, 16 Oct 2016 14:00:00 +0530


timeshift (16.10.5) trusty; urgency=medium

  * Fixed build errors on trusty; Removed references to
  Gtk.ButtonBoxStyle.EXPAND;

  * Added support for BTRFS systems with @ and @home on separate
  devices

  * Added workaround for older versions of lsblk; Fixed support for
  Ubuntu 14.04 and Mint 17.x;

  * Updated list of donors in Credits section

  * Use valac-0.26
  
 -- Tony George <tony.george.kol@gmail.com>  Sat, 15 Oct 2016 14:00:00 +0530


timeshift (16.10.3) trusty; urgency=medium

  * Statusbar: Display dates in 24-hr format;

  * Check system uuid when linking from previous snapshot; This allows
  snapshots of multiple systems to be saved on the same backup device