@@ -25,6 +25,8 @@ timeshift (16.11) trusty; urgency=medium
 
   * Restore: Bind /dev/pts when chrooting the restored system;
 
+  * Restore: Check and repair file systems after offline restore;
+
   * UI: Added borders around statusbar; 
 
   * OS Support: Fedora/RedHat: Fixed detection of Live USB mode;
